=======
CHANGES
=======


1.0.10 (unreleased)
-------------------

- Added the thread stack trace to the log message.


1.0.9 (2013-10-02)
------------------

- Fix ``getAllThreadInfo`` with None / borked ``worker_environ``


1.0.8 (2013-09-30)
------------------

- Added ``finished-log-level`` to be able to set the logging level when a
  long running requests is finished.

- Added ``verbose`` option, setting that on will include the other running
  thread's infos in the log entry


1.0.7 (2013-09-16)
------------------

- Added
  - ``getThreadsUsed``: Return the current number of working threads
  - ``getMaxThreadsUsed``: Return the number MAX of working threads
                           since last cleared


1.0.6 (2013-08-28)
------------------

- Removed the ``dbgp`` dependency


1.0.5 (2013-08-26)
------------------

- Moved ``removeWSGIStuff`` to ``RequestCheckerThread``.

- Feature: collecting maximum request times, use ``getMaxRequestTime`` to
  retrieve


1.0.4 (2012-05-22)
------------------

- First public release


1.0.3 (2012-05-22)
------------------

- Added `exclude-url-%i` options


1.0.2 (2012-05-16)
------------------

- The original URL should be shown instead of the internal one.
  (using HTTP_X_FORWARDED_FOR)

- Drop meaningless wsgi environment variables

- Only report a request over limits once.

- Report the final duration of the request.

- When a zope request is around
  - Report the principal running the request.
  - List the query/form parameters in a nicely formatted form.


1.0.1 (2012-05-04)
------------------

- Forgot to declare the `make_filter` entry point.


1.0.0 (2012-05-04)
------------------

- Initial release as a separate package.