@@ -7,6 +7,7 @@ CHANGES
 -------------------
 
 - Added the thread stack trace to the log message.
+- Added an event to hook in monitoring of thread pool state.
 
 
 1.0.9 (2013-10-02)
